# tree-c

./: .gitignore  CMakeLists.txt  README.md  emotion.cpp  emotion.h  evaluator.cpp  evaluator.h  input_manager.cpp  input_manager.h  output_manager.cpp  output_manager.h  user_data.cpp  user_data.h
cpp/: color.cpp  emotion.cpp  evaluator.cpp  input_manager.cpp  main.cpp  output_manager.cpp  user_data.cpp
h/: color.h  constant.h  emotion.h  evaluator.h  input_manager.h  output_manager.h  user_data.h
